--- a/service.yaml
+++ b/service.yaml
@@ -7,6 +7,6 @@ spec:
     app: webapp
   ports:
     - protocol: TCP
-      port: 80
-      nodeport: 8080
-  type: LoadBalancer
+      targetport: 80
+      nodeport: 32345
+  type: NodePort
